Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69231

QWebEngineView::dropEvent does not forward keyboard modifiers

    XMLWordPrintable

Details

    • Linux/X11, macOS, Windows

    Description

      The QWebEngineView::dropEvent override does not forward keyboard modifiers.
      The code @ https://code.woboq.org/qt5/qtwebengine/src/core/web_contents_adapter.cpp.html#1530
      does show that 0 is sent unconditionally, while qApp->keyboardModifiers() should be used.
      This make it impossible to read the JavaScript drop event modifiers as they are all off.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            juri.valdmann Jüri Valdmann (Inactive)
            filipe.azevedo Filipe Azevedo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes